Added configuration for resource limitation for 16Gb RAM and 10 cores CPU

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,125 +1,125 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "DotNet 9.0, Docker, & MS-SQL",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "dotnet-app",
-	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "name": "DotNet 9.0, Docker, & MS-SQL",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "dotnet-app",
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {
-		"ghcr.io/devcontainers/features/node:1": {
-			"nodeGypDependencies": true,
-			"installYarnUsingApt": true,
-			"version": "lts",
-			"pnpmVersion": "latest",
-			"nvmVersion": "latest"
-		},
-		"ghcr.io/dapr/cli/dapr-cli:0": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-extra/features/protoc:1": {
-			"version": "latest"
-		},
-		"ghcr.io/frntn/devcontainers-features/postman:1": {},
-		"ghcr.io/robbert229/devcontainer-features/postgresql-client:1": {
-			"version": "13"
-		},
-		"ghcr.io/localstack/devcontainer-feature/localstack-cli:0": {
-			"awslocal": true,
-			"samlocal": true,
-			"installUsingPython": true,
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/git:1": {
-			"ppa": true,
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/github-cli:1": {
-			"installDirectlyFromGitHubRelease": true,
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-extra/features/actions-runner:1": {
-			"version": "latest",
-			"dotnetVersion": "latest"
-		},
-		"ghcr.io/devcontainers-extra/features/node-asdf:0": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-community/npm-features/typescript:1": {
-			"version": "latest"
-		},
-		"ghcr.io/r3dpoint/devcontainer-features/tailwindcss-standalone-cli:1": {
-			"version": "latest"
-		},
-		"ghcr.io/schlich/devcontainer-features/playwright:0": {},
-		"ghcr.io/devcontainers-extra/features/prisma:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-extra/features/zsh-plugins:0": {
-			"plugins": "ssh-agent npm",
-			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions",
-			"username": "root"
-		}
-	},
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  "features": {
+    "ghcr.io/devcontainers/features/node:1": {
+      "nodeGypDependencies": true,
+      "installYarnUsingApt": true,
+      "version": "lts",
+      "pnpmVersion": "latest",
+      "nvmVersion": "latest"
+    },
+    "ghcr.io/dapr/cli/dapr-cli:0": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers-extra/features/protoc:1": {
+      "version": "latest"
+    },
+    "ghcr.io/frntn/devcontainers-features/postman:1": {},
+    "ghcr.io/robbert229/devcontainer-features/postgresql-client:1": {
+      "version": "13"
+    },
+    "ghcr.io/localstack/devcontainer-feature/localstack-cli:0": {
+      "awslocal": true,
+      "samlocal": true,
+      "installUsingPython": true,
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/git:1": {
+      "ppa": true,
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/github-cli:1": {
+      "installDirectlyFromGitHubRelease": true,
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers-extra/features/actions-runner:1": {
+      "version": "latest",
+      "dotnetVersion": "latest"
+    },
+    "ghcr.io/devcontainers-extra/features/node-asdf:0": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers-community/npm-features/typescript:1": {
+      "version": "latest"
+    },
+    "ghcr.io/r3dpoint/devcontainer-features/tailwindcss-standalone-cli:1": {
+      "version": "latest"
+    },
+    "ghcr.io/schlich/devcontainer-features/playwright:0": {},
+    "ghcr.io/devcontainers-extra/features/prisma:2": {
+      "version": "latest"
+    },
+    "ghcr.io/devcontainers-extra/features/zsh-plugins:0": {
+      "plugins": "ssh-agent npm",
+      "omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions",
+      "username": "vscode"
+    }
+  },
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [1443, 4566,5000, 5001, 5672, 6379, 8000, 9000, 15672],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  "forwardPorts": [1443, 4566, 5000, 5001, 5672, 6379, 8000, 9000, 15672],
 
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "bash .devcontainer/postCreateCommand.sh && bash .devcontainer/mssql/postCreateCommand.sh 'sqlserver-dev' 'jajnav5@' './api/bin/Debug/' './.devcontainer/mssql/'",
+  // Use 'postCreateCommand' to run commands after the container is created.
+  "postCreateCommand": "bash .devcontainer/postCreateCommand.sh && bash .devcontainer/mssql/postCreateCommand.sh 'sqlserver-dev' 'jajnav5@' './api/bin/Debug/' './.devcontainer/mssql/'",
 
-	// Configure tool-specific properties.
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"amazonwebservices.amazon-q-vscode",
-				"amazonwebservices.aws-toolkit-vscode",
-				"christian-kohler.npm-intellisense",
-				"Codeium.codeium",
-				"Compulim.vscode-mocha",
-				"cweijan.vscode-redis-client",
-				"dbaeumer.vscode-eslint",
-				"docsmsft.docs-yaml",
-				"EditorConfig.EditorConfig",
-				"esbenp.prettier-vscode",
-				"firefox-devtools.vscode-firefox-debug",
-				"GitHub.copilot",
-				"GitHub.copilot-chat",
-				"GitHub.vscode-pull-request-github",
-				"GitHub.remotehub",
-				"google.geminicodeassist",
-				"humao.rest-client",
-				"kilocode.kilo-code",
-				"LocalStack.localstack",
-				"ms-azuretools.vscode-azure-github-copilot",
-				"ms-azuretools.vscode-docker",
-				"ms-edgedevtools.vscode-edge-devtools",
-				"ms-dotnettools.csdevkit",
-				"ms-dotnettools.csharp",
-				"ms-dotnettools.vscode-dotnet-runtime",
-				"ms-playwright.playwright",
-				"ms-ossdata.vscode-postgresql",
-				"ms-vscode.csharp",
-				"ms-vscode.remote-repositories",
-				"ms-vscode-remote.remote-containers",
-				"ms-vscode-remote.vscode-remote-extensionpack",
-				"ms-vscode-remote.remote-wsl",
-				"ms-vscode.vscode-typescript-next",
-				"ms-vscode.live-server",
-				"ms-vscode.remote-explorer",
-				"ms-vscode.vscode-typescript-language-features",
-				"ms-vsliveshare.vsliveshare",
-				"PKief.material-icon-theme",
-				"Postman.postman-for-vscode",
-				"redhat.vscode-yaml",
-				"VisualStudioExptTeam.intellicode-api-usage-examples",
-				"VisualStudioExptTeam.vscodeintellicode"
-			]
-		}
-	}
+  // Configure tool-specific properties.
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "amazonwebservices.amazon-q-vscode",
+        "amazonwebservices.aws-toolkit-vscode",
+        "christian-kohler.npm-intellisense",
+        "Codeium.codeium",
+        "Compulim.vscode-mocha",
+        "cweijan.vscode-redis-client",
+        "dbaeumer.vscode-eslint",
+        "docsmsft.docs-yaml",
+        "EditorConfig.EditorConfig",
+        "esbenp.prettier-vscode",
+        "firefox-devtools.vscode-firefox-debug",
+        "GitHub.copilot",
+        "GitHub.copilot-chat",
+        "GitHub.vscode-pull-request-github",
+        "GitHub.remotehub",
+        "google.geminicodeassist",
+        "humao.rest-client",
+        "kilocode.kilo-code",
+        "LocalStack.localstack",
+        "ms-azuretools.vscode-azure-github-copilot",
+        "ms-azuretools.vscode-docker",
+        "ms-edgedevtools.vscode-edge-devtools",
+        "ms-dotnettools.csdevkit",
+        "ms-dotnettools.csharp",
+        "ms-dotnettools.vscode-dotnet-runtime",
+        "ms-playwright.playwright",
+        "ms-ossdata.vscode-postgresql",
+        "ms-vscode.csharp",
+        "ms-vscode.remote-repositories",
+        "ms-vscode-remote.remote-containers",
+        "ms-vscode-remote.vscode-remote-extensionpack",
+        "ms-vscode-remote.remote-wsl",
+        "ms-vscode.vscode-typescript-next",
+        "ms-vscode.live-server",
+        "ms-vscode.remote-explorer",
+        "ms-vscode.vscode-typescript-language-features",
+        "ms-vsliveshare.vsliveshare",
+        "PKief.material-icon-theme",
+        "Postman.postman-for-vscode",
+        "redhat.vscode-yaml",
+        "VisualStudioExptTeam.intellicode-api-usage-examples",
+        "VisualStudioExptTeam.vscodeintellicode"
+      ]
+    }
+  },
 
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  "remoteUser": "vscode"
 }
